2005-04-18  Peter Johanson <latexer@gentoo.org>

	* configure.in: Add Boo addin logic

2005-04-18  Peter Johanson <latexer@gentoo.org>

	* configure.in: Add monodevelop.pc generation
	* Makefile.am: Add monodevelop.pc installation/cleanup
	* monodevelop.pc.in: New monodevelop.pc file for external addins to
	use.

2005-04-16  John Luke  <john.luke@gmail.com>

	* configure.in: bump gtk# dep to 1.9.3 for latest dock changes
	remove MonoDevelop.Gui.Utils config file

2005-04-14  Raja R Harinath  <rharinath@novell.com>

	* contrib/Makefile.am (log4net.dll): Copy from $(srcdir).

2005-04-03  John Luke  <john.luke@gmail.com>

	* autogen.sh: add back aclocal

2005-04-01	Christian Hergert	<christian.hergert@gmail.com>

	* contrib/: Add folder for external libraries
	* contrib/log4net.dll: Apache Logging .NET Library
	* contrib/log4net.license.txt: log4net license
	* contrib/Makefile.am: Makefile for contrib libraries
	* configure.in: Add the new Makefile.am files

2005-03-13  John Luke  <john.luke@gmail.com>

	* autogen.sh: remove libtool, autoheader, and aclocal
	usage, I dont think we'll need it

2005-03-13  John Luke  <john.luke@gmail.com>

	* configure.in: remove gdkdock & c-related stuff
	add Core/src/MonoDevelop.Dock/Makefile output
	* Core/gdldock: kill
	* Core/src/Makefile.am: add MonoDevelop.Dock
	* Core/Makefile.am: remove gdldock

2005-03-12  Todd Berman  <tberman@off.net>

	* configure.in: push/branch 0.6

2005-02-28  John Luke  <john.luke@gmail.com>

	* monodevelop.in: use /bin/sh and exec instead
	of running from bash

2005-02-24  John Luke  <john.luke@gmail.com>

	* configure.in: move JavaBinding to Extras
	and some incomplete dep-checking for ikvm

2005-02-09  John Luke  <john.luke@gmail.com>

	* */Makefile.am: build to build/bin/ so the make CSC='mcs -g'
	and then running with --debug will work
	almost fix distcheck
	* po/POTFILES.in: update
	* configure.in: dep on gtk-sharp-2 > 1.9.2

2005-02-10  Christian Hergert <christian.hergert@gmail.com>
