@@ -1,3 +1,7 @@
+2005-04-26  Ben Maurer <bmaurer@ximian.com>
+	
+	* po/POTFILES.in: remove dead files.
+
 2005-04-18  Peter Johanson <latexer@gentoo.org>
 
 	* configure.in: Add Boo addin logic
